--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="settings">Settings</string>
     <string name="share">Share</string>
     <string name="fragment_map">Fragment Map</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
