--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="tracker">Tracker</string>
     <string name="map">Map</string>
     <string name="history">History</string>
-    <string name="profil">Profil</string>
+    <string name="profile">Profile</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
     <string name="fragment_map">Fragment Map</string>
