--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="tracker">Tracker</string>
     <string name="map">Map</string>
     <string name="history">History</string>
@@ -17,6 +16,41 @@
     <string name="fragment_map">Fragment Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="text_translation">Language</string>
+    <string name="play_pause_button">play / pause button</string>
+    <string name="todo">TODO</string>
+    <string name="_0_0">0.0</string>
+    <string name="climb">Climb</string>
+    <string name="time">Time</string>
+    <string name="average_speed">Average speed</string>
+    <string name="calorie">Calorie</string>
+    <string name="distanse">Distanse</string>
+    <string name="speed">Speed</string>
+    <string name="climb_value">0.0</string>
+    <string name="calorie_value">0.0</string>
+    <string name="time_value">Time</string>
+    <string name="calories_value">0</string>
+    <string name="distance_value">Distanse</string>
+    <string name="distances_value">0.0</string>
+    <string name="speeds_value">0.0</string>
+    <string name="average_speeds_value">0.0</string>
+    <string name="climbs_value">0</string>
+    <string name="time_picture">time_picture</string>
+    <string name="climb_picture">climb_picture</string>
+    <string name="button_stop">Button stop</string>
+    <string name="distance_picture">distance_picture</string>
+    <string name="average_speed_picture">average_speed_picture</string>
+    <string name="speed_picture">speed_picture</string>
+    <string name="calorie_picture">calorie_picture</string>
+    <string name="alert_message">"Do you want to finish your track?"</string>
+    <string name="alert_message_no">"No"</string>
+    <string name="alert_message_yes">"Yes"</string>
+    <string name="alert_message_prolong">"You prolong your travel"</string>
+    <string name="alert_message_finished">""You finished your track""</string>
+    <string name="mode">Mode</string>
+    <string name="light">Light</string>
+    <string name="dark">Dark</string>
+    <string name="lightText">Light</string>
+
     <string-array name="language_option">
         <item>English</item>
         <item>Indonesian</item>
