--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="male">Male</string>
     <string name="height">Height</string>
     <string name="weight">Weight</string>
-    <string name="sex">Sex</string>
+    <string name="sex">Gender</string>
     <string name="sexMale">male</string>
     <string name="female">female</string>
     <string name="city_bicycle">City bicycle</string>
@@ -80,7 +80,6 @@
     <string name="enter_your_height_here">Enter your height here</string>
     <string name="enter_your_weight_here">Enter your weight here</string>
     <string name="enter_your_name_here">Enter your name here</string>
-    <string name="light_text">Loading</string>
 
 
     <string-array name="group2">
